# Robotics-Studio-2

./: .gitignore  README.md  bin_poses  camera_to_robot_calibration.json  compile_commands.json  directory_structure.txt  getting-started.html  index.html  perception_guide.html  perception_walkthrough.html  poses.json  test.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motion_control_subsystem/share/motion_control_subsystem/: package.bash  package.zsh
install/object_msgs/share/object_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/object_msgs/share/object_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_object_msgs__rosidl_generator_cExport.cmake  export_object_msgs__rosidl_generator_cppExport.cmake  export_object_msgs__rosidl_generator_pyExport.cmake  export_object_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_object_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  object_msgsConfig-version.cmake  object_msgsConfig.cmake  object_msgs__rosidl_typesupport_cExport.cmake  object_msgs__rosidl_typesupport_cppExport.cmake  object_msgs__rosidl_typesupport_introspection_cExport.cmake  object_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/object_msgs/share/object_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/object_msgs/share/object_msgs/msg/: Object.idl  Object.msg  ObjectArray.idl  ObjectArray.msg
install/object_msgs/share/object_msgs/rust/: Cargo.toml  build.rs
install/onrobot_description/share/onrobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/onrobot_description/share/onrobot_description/cmake/: onrobot_descriptionConfig-version.cmake  (+1 more)
install/onrobot_driver/include/onrobot_driver/: IModbusConnection.hpp  RG.hpp  SerialConnectionWrapper.hpp  TCPConnectionWrapper.hpp  rg_hardware_interface.hpp
install/onrobot_driver/share/onrobot_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  rg_hardware_interface.xml
install/plastic_detection/share/plastic_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur3_demo_cpp/share/ur3_demo_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_description_local/share/ur_description_local/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_gripper_demo/share/ur_gripper_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_onrobot_control/share/ur_onrobot_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_onrobot_description/share/ur_onrobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_onrobot_moveit_config/share/ur_onrobot_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/motion_control_subsystem/: CMakeLists.txt  bin_poses.json  package.xml
src/motion_control_subsystem/config/: moveit_servo_config.yaml
src/motion_control_subsystem/launch/: ur_moveit.launch.py
src/motion_control_subsystem/src/: demo_helper_node.py  pick_n_place_try2_1.cpp  translator_node.py
src/motion_control_subsystem/ur_gripper_demo/install/: local_setup.sh  setup.bash  setup.ps1  setup.zsh
src/object_msgs/: CMakeLists.txt  package.xml
src/object_msgs/msg/: Object.msg
src/plastic_detection/: setup.cfg  setup.py
src/plastic_detection/plastic_detection/: camera_calibration.py  camera_to_robot_calibration.json  grip_pose_node.py  obb_detector_bottom_point.py  obb_detector_homography.py  obb_detector_improved.py  obb_detector_node.py  obb_detector_tracked.py  obb_detector_unified_plane.py  workspace_planner_node.py
src/ur3_demo_cpp/: CMakeLists.txt  package.xml
src/ur3_demo_cpp/launch/: ur_moveit.launch.py
src/ur3_demo_cpp/src/: knowldedge.cpp  moveit_cpp_tutorial.cpp
src/ur_description_local/: CMakeLists.txt
src/ur_description_local/cmake/: ur_description_localConfig.cmake
src/ur_description_local/config/ur3e/: joint_limits.yaml
src/ur_gripper_demo/: CMakeLists.txt  README_status_gui.md  bin_poses.json  package.xml
src/ur_gripper_demo/config/: bin_poses.json  settings.json
src/ur_gripper_demo/launch/: bringup.launch.py  ur_moveit.launch.py
src/ur_gripper_demo/scripts/: gripper_bridge.py  plastic_detections_translator.py  plastic_detections_translator_calibrated.py  status_gui.py  test_helper.py
src/ur_gripper_demo/src/: GUI.cpp  gripper_demo_clean.cpp  motion_controller.cpp  motion_controller_reactive.cpp  moveit_cpp_tutorial.cpp  pick_n_place_try2.cpp  pick_n_place_try2_1.cpp  pick_n_place_try3.cpp  test_helper.py  test_pick_n_place_mtc.cpp  unit_test_pick_n_place.cpp
src/ur_gripper_demo/ur_gripper_demo/install/: setup.sh
src/ur_gripper_demo/ur_gripper_demo/log/: latest_build
src/ur_onrobot/ur_onrobot_control/config/: ur_onrobot_controllers.yaml
src/ur_onrobot/ur_onrobot_control/launch/: start_robot.launch.py
src/ur_onrobot/ur_onrobot_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
(+696 files in other folders)
